PDF display update

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-    <div class="resume">
+    <div class="portfolio">
 
-        <header>
-		<h1> CS490 Web Developement Project </h1>
+	<header>
+		<h1> CS490 Web Developement Project: Portfolio </h1>
             	<h2>Thomas Reilly</h2>
             	<p>Contact: Tarycx@umsystem.edu | 816-888-2212 </p>
             	<p> GitHub: github.com/Tarycx </p>
@@ -30,20 +30,74 @@
         </section>
 
        
-
         <section class="pdf">
             <h2>Resume(PDF)</h2>
 	    <a href="Thomas_Reilly_Resume.pdf" target="_blank" class="download-button" 
 	    download> <ul><li> Download My Resume </li></ul> </a>
+	</section>
+	
+<!-- Resume Data -->
 
-        </section>
+	<section class="resume">
+		<div class ="resume-section">
+        	<h2>Experience:</h2>
+        	<div class="resume-content">
+            	<p><strong>United States Marine Corps: 2017-2021</strong><br>
+            	Non-Commissioned Officer in 3rd Marines 5th Regiment.</p>
+            	<ul>
+                	<li>Honorable discharge with good conduct</li>
+                	<li>Responsible for managing and leading combat teams</li>
+                	<li>Worked with the United States Border Patrol, managed a team that monitored over 70 miles of U.S. border</li>
+                	<li>9 months experience aboard a United States Naval Vessel as Hazmat Technician</li>
+            	</ul>
+        	</div>
+       		<div class="resume-content">
+            	<p><strong>Advanced Biohazard Cleanup INC: 2013-2017</strong><br>
+            	Senior Technician.</p>
+            	<ul>
+                	<li>Adhered to best practices in the field, coordinating, training, and managing all technicians attending biohazard sites</li>
+                	<li>Ensured work was undertaken to the highest quality standards and safety</li>
+                	<li>Removed bio-hazardous or chemical substances dangerous to humans, animals, and/or environment</li>
+                	<li>Properly handled and secured crime and trauma scenes or bio sites, ensuring areas were safe, clean, and sanitized</li>
+                	<li>Managed transportation of biohazard materials to incineration sites</li>
+            	</ul>
+           	</div>
+		</div>
+    		
+
+    		<div class="resume-section">
+        		<h2>Education:</h2>
+        		<ul class="resume-content">
+            			<li>UMKC Computer Science, 2022 - Present</li>
+            			<li>Metropolitan Community College, 2021</li>
+            			<li>Non-commissioned Officer School, 2020</li>
+            			<li>High School Diploma, 2016</li>
+        		</ul>
+    		</div>
+
+   	 	<div class="resume-section">
+        	<h2>Skills:</h2>
+        	<ul class="resume-content">
+            		<li>Leading Teams and Developing Individuals</li>
+            		<li>Being Responsible and Maintaining Expensive Equipment/Property</li>
+            		<li>Adaptable to Situations</li>
+            		<li>Quick Learner and Dependable</li>
+            		<li>Believes in Upholding Organizational Values</li>
+            		<li>Good Communication Skills and Tactful</li>
+            		<li>Highly Motivated with a Strong Work Ethic</li>
+        	</ul>
+    		</div>	
+
+	
+
+       </section>
 
 	 <section class="education">
             <h2>Education Background(short description and a list of courses)</h2>
             <div class="educaiton-grid">
 
 		<h3> Education desricption: </h3>
-		<p> Currently a Junior pursuing a Bachelor of Science in Computer Science at the University of Missouri-Kansas City. Expected Graduation date: May 2025. I Graduated High School in 2017. Following this I joined the United States Marine Corp for 4 years. After finising my four years I recieved an honorable Discharge with Good Conduct. After severing in the military I took one year at Metropolitan Community College Kansas City. During Fall of 2022, I transfered to University of Missouri-Kansas City where I continue my education. </p>
+		<p> Currently a Junior pursuing a Bachelor of Science in Computer Science at the University of Missouri-Kansas City. Expected Graduation date: May 2025. I Graduated High School in 2016. Following this I joined the United States Marine Corp for 4 years. After finising my four years I recieved an honorable Discharge with Good Conduct. After severing in the military I took one year at Metropolitan Community College Kansas City. During Fall of 2022, I transfered to University of Missouri-Kansas City where I continue my education. </p>
 
                 <h3>Course History</h3>
 
@@ -88,10 +142,18 @@
             </div>
         </section>
 
-        <section class="sources">
-            <h2>Project Sources</h2>
-            <div class="source-item">
 
+	<!-- <section>
+		<h2>Projects</h2>
+
+	</section> -->
+
+
+        <section class="sources">
+            <h2>Sources</h2>
+            <div class="source-item">
+		<p>These sources aided in the development of this project. The sources aided in understanding HTML and CSS design and best practices.</p>
+		
                	<ul>
                 	<li><p>CS490WD Canvas Lectures and Resources</p</li>
 
