final deliverables update

--- a/index.html
+++ b/index.html
@@ -143,10 +143,42 @@
         </section>
 
 
-	<!-- <section>
-		<h2>Projects</h2>
 
-	</section> -->
+	<section class="projects">
+		<h2>Projects</h2>
+		
+		<h4>1. Parser Projcet </h4>
+		<p>University of Missouri-Kansas City CS441 Program Design and Implementation</p>
+		<ul>
+			<li>Developed parser using functional programming languege to process and tokenize set of grammers</li>
+			<li>Studied compiling processes with focues on lexical Analyzer and Syntax Analyzer  </li>
+
+
+
+
+		</ul>
+
+		<h4>2. Sentiment Analyzer Project</h4>
+		<p>University of Missouri-Kansas City CS303 Data Structures</p>
+		<ul>
+			<li>Developed a C++ based sentiment analyzer for mass text evaluations</li>
+			<li>Studied data processing techinques appiled to data structures and algorithms </li>
+
+
+
+
+		</ul>
+	</section>
+
+
+
+	<section>
+		<h2>Research</h2>
+		<p>No Research History</p>
+	
+	</section>
+
+
 
 
         <section class="sources">
