fix puncuation and webpage title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css"> <!--CSS template-->
 </head>
 
@@ -25,7 +25,7 @@
 
         <section class="ProBio">
             <h2>Professional Bio</h2>
-            <p>I'm a former United States Marine and dedicated third-year Bachelor of Science in Computer Science student at University of Missouri-Kansas City. I have a strong foundation in programming languages such as Java, Python, and C++. I have experience with Algorithm design, web development, data structures, software security and software development. Problem solving and using computational resources to capture the needs of the user, are aspects of computational science I enjoy. My time is invested in personal and open-source projects to gain experience and to contribute to the community. I aspire to solve modern challenges as a software developer or to utilize my security background as a US military veteran to fortify system and software security.  </p>
+            <p>I'm a former United States Marine and dedicated third-year Bachelor of Science in Computer Science student at University of Missouri-Kansas City. I have a strong foundation in programming languages such as Java, Python, and C++. I have experience with algorithm design, web development, data structures, software security and software development. Problem solving and using computational resources to capture the needs of the user, are aspects of computational science I enjoy. My time is invested in personal and open-source projects to gain experience and to contribute to the community. I aspire to solve modern challenges as a software developer or to utilize my security background as a US military veteran to fortify system and software security.  </p>
             
         </section>
 
